# DLAMP.cm

./: .env.example  .gitignore  README.md  pyproject.toml  train.py
config/: train.yaml
config/callbacks/: default.yaml
config/dataset/: base.yaml  default.yaml
config/dataset/res/: 10km.yaml  4km.yaml
config/dataset/split/: rwrf_2022.yaml
config/dataset/var/: cm.yaml
config/logger/: default.yaml
config/model/architecture/: cm.yaml  cm_10km.yaml
config/model/layer/: convnext.yaml  resnet.yaml
config/model/loss/: crps.yaml
config/model/module/: default.yaml  unet.yaml
config/model/optimizer/: adamw.yaml
config/model/scheduler/: warmup_cosine_restart.yaml
config/model/system/: _common_params.yaml  edm.yaml  standard.yaml
scripts/: calculate_distribution.py  calculate_stats.py  dry_run.py  export_onnx.py
src/: eval.py  train.py
src/callbacks/: __init__.py  visualizer.py
src/dataset/: __init__.py  data_dataset.py  data_indexer.py  data_manager.py
src/model/: __init__.py  direct_downscaling.py
src/model/architecture/: __init__.py  convnext.py  global_encoder.py  mlp.py  position_encoder.py  resnet.py  roi_projector.py  unet.py
src/model/layers/: __init__.py  convnext.py  cross_attention.py  edm_sampler.py  film.py  mlp.py  resnet.py
src/model/losses/: crps.py
src/model/modules/: __init__.py  global_encoder.py  unet.py
src/model/systems/: __init__.py  edm.py  (+2 more)
src/utils/: __init__.py  best_model_finder.py  center_cropper.py  data_cropper.py  file_writer.py  power_calculator.py  time_encoder.py  z_interpolator.py  z_scaler.py
(+10 files in other folders)
