[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-downscaling"
version = "0.1"
description = "DLAMP.cm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "lightning>=2.5.5",
    "numpy>=2.1.2",
    "python-dotenv>=1.2.1",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "wandb>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]
